force-app/main/default/objects/Form_1_Cert_Status__c/Form_1_Cert_Status__c.object-meta.xml
<CustomObject>
    <description>Per Cassandra request, HR needed to track the status or the FORM-1 at the cert level.</description>
    <label>Form 1 Cert Status</label>
    <nameField>
        <displayFormat>F1-CS-{000000}</displayFormat>
        <label>Form 1 Cert Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form 1 Cert Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>