force-app/main/default/objects/Form_1_Cert_Status__c/fields/Admin_Data_Update_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Admin_Data_Update_Hidden__c</fullName>
    <description>for data updating purposes. this field when modified triggers the flow that update cert info to Form 1</description>
    <label>Admin Data Update Hidden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>