force-app/main/default/objects/Form_1_Cert_Status__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>IF(Form_1__r.SEC2_Class_Title2__c &lt;&gt; "",Form_1__r.SEC2_Class_Title2__c, Form_1__r.SEC1_Class_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification</label>
    <type>Text</type>
</CustomField>