force-app/main/default/objects/Form_1_Cert_Status__c/fields/Coding_Completed__c.field-meta.xml
<CustomField>
    <fullName>Coding_Completed__c</fullName>
    <label>Coding Completed</label>
    <type>Date</type>
</CustomField>