force-app/main/default/objects/Form_1_Cert_Status__c/fields/Date_Pinks_Offer_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Pinks_Offer_Letter_Received__c</fullName>
    <label>Pinks/Offer Letter Received</label>
    <type>Date</type>
</CustomField>