force-app/main/default/objects/Form_1_Cert_Status__c/fields/F1_Cert_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>F1_Cert_Status_Flag__c</fullName>
    <formula>IF((Form_1__r.Number_of_F1_Cert_Records__c &gt; 1) &amp;&amp; (Form_1__r.F1_Status_Date_Created__c == DATEVALUE(CreatedDate)), "1", If(Form_1__r.Number_of_F1_Cert_Records__c = 1,"1","0" ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F1 Cert Status Flag</label>
    <type>Text</type>
</CustomField>