force-app/main/default/objects/Form_1_Cert_Status__c/fields/Underfill_Cert_List__c.field-meta.xml
<CustomField>
    <fullName>Underfill_Cert_List__c</fullName>
    <label>Underfill Cert List #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>